fix(uniform): align checkboxes with labels in checkboxgroups

--- a/src/styles/unibase/forms/_checkboxes.sass
+++ b/src/styles/unibase/forms/_checkboxes.sass
@@ -5,13 +5,15 @@ uni-checkbox-input
 
 uni-checkbox-input label,
 uni-radio-input label,
-uni-radiogroup-input
+uni-radiogroup-input,
+uni-checkboxgroup-input,
 .uni-checkbox label,
     width: 100%
 
 uni-checkbox-input,
 uni-radio-input,
 uni-radiogroup-input,
+uni-checkboxgroup-input,
 .uni-checkbox
 
     input[type=checkbox],
